# ModelFlow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  version.py
configs/: mobilenet_v1_224.yaml  r50_224.yaml
convert/: README.md  tiny_net.py
core/: __init__.py
core/backends/: __init__.py  backend_base.py  backend_runtime.py  backend_tensorrt.py  backend_triton.py  onnx_model.py  triton_model.py  trt_model.py
core/cfgs/: __init__.py  coco_cfg.py  imagenet_cfg.py
core/npy/: __init__.py  classify_dataset.py  classify_evaluator.py  classify_preprocess.py  detect_dataset.py  segment_dataset.py  segment_evaluator.py  yolov5_evaluator.py  yolov8_evaluator.py  yolov8_preprocess.py  yolov8seg_evaluator.py
core/tch/: __init__.py  classify_dataset.py  classify_evaluator.py  classify_preprocess.py
core/utils/: __init__.py  dataloaders.py  general.py  helpers.py  logger.py  ops.py  plots.py  postprocessor.py  preprocessor.py  results.py
cplusplus/: .gitignore  CMakeLists.txt  README.md
cplusplus/assets/: framework.eddx
cplusplus/common/: CMakeLists.txt  sort.cpp
cplusplus/inc/: modelinfer.h
cplusplus/include/: recogconfig.h  recoginterface.h
cplusplus/infer/: inferinterface.h
cplusplus/infer/mnn/: inferimpl.cc  inferimpl.h
cplusplus/linux/: README.md
cplusplus/linux/mnn_infer/: .gitignore  CMakeLists.txt
cplusplus/linux/new_arch/: CMakeLists.txt  infer_engine.h  main.cpp  model_infer.h
cplusplus/linux/onnx_to_mnn/: README.md
cplusplus/linux/onnx_to_onnxruntime/: main.cpp  test_infer_engine.cpp
cplusplus/linux/onnx_to_onnxruntime/source/: infer_engine.cpp  infer_engine.h  onnx_infer.h
cplusplus/linux/onnx_to_onnxruntime/test/: batch_image_test.cpp
cplusplus/linux/onnx_to_openvino/: CMakeLists.txt
cplusplus/linux/onnx_to_openvino/source/: openvino_infer.cpp
cplusplus/linux/onnx_to_openvino/test/: batch_image_test.cpp  single_image_test.cpp
cplusplus/mnn/: .gitignore  INSTALL.md  README.md
cplusplus/onnxruntime/: .gitignore  CMakeLists.txt  README.md
cplusplus/opencv/: .clang-format  .gitignore  CMakeLists.txt  README.md  jpeg2mat.cpp  main.cpp  rotate_rect_crop.cpp
cplusplus/opencv/classify/: main.cpp
cplusplus/opencv/detect/: cv_detect.cpp
cplusplus/opencv/dnn_classify/: main.cpp
cplusplus/opencv/dnn_yolov5/: yolo-image.cpp  yolo-video.cpp
cplusplus/opencv/dnn_yolov5/src/: yolodetector.cpp  yolodetector.h
cplusplus/opencv/imgproc_detect/: imgproc_detect.cpp
cplusplus/opencv/jpeg2mat/: jpeg2mat.cpp  jpeg2mat.h  main.cpp
cplusplus/opencv/yolov5-opencv/: CMakeLists.txt  yolo-video.cpp
cplusplus/source/: recoginterface.cc
cplusplus/test/: gtest_main.cc
cplusplus/zco/: CMakeLists.txt
cplusplus/zco/install/include/: library.h
cplusplus/zco/source/: common_operation.cpp  common_operation.h  image_process.h
cplusplus/zco/test/: test_library.cpp
cplusplus2/: README.md
cplusplus2/mnn/: CMakeLists.txt  classifyinfer.cpp  classifyinfer.h  classifyinfer_test.cpp  pictureRecognition.cpp
cplusplus2/opencv/: .gitignore  CMakeLists.txt  README.md  jpeg2mat.cpp  object_detect.cpp
cplusplus2/opencv/yolov5-opencv/: CMakeLists.txt  README.md  yolo-image.cpp  yolo-video.cpp  yolo.cpp
cplusplus2/opencv/yolov5-opencv/src/: yolodetector.cpp  yolodetector.h
cplusplus_linux/: README.md
cplusplus_linux/onnx_to_onnxruntime/: CMakeLists.txt  main.cpp
cplusplus_linux/opencv_plus_onnxruntime/: CMakeLists.txt  main.cpp
cplusplus_linux/opencv_plus_onnxruntime_v2/: Model.h  main.cpp
cpp/linux/onnx_to_onnxruntime/: CMakeLists.txt  InferEngine.cpp  InferEngine.h  onnx_infer.cpp  onnx_infer.h  test_infer_engine.cpp  test_onnx_infer.cpp
cpp/linux/onnx_to_onnxruntime/source/: infer_engine.cpp  infer_engine.h  onnx_infer.cpp
cpp/linux/onnx_to_onnxruntime/test/: batch_image_test.cpp  single_image_test.cpp  test_onnx_infer.cpp
cpp/linux/opencv_plus_onnxruntime/: .gitignore  CMakeLists.txt  main.cpp
cpp/windows/: README.md
cpp/zco/: .gitignore
data/: README.md  __init__.py  base.py  build.py  classify.py  coco.py
data/configs/: cifar10.yaml  cifar100.yaml  coco-seg.yaml  coco.yaml  imagenet.yaml
data/tests/: __init__.py  test_datasets.py
docs/: index.md
docs/export/: classification.md  detection.md  index.md  segmentation.md  tensorrt.md  triton.md
eval/: README.md  __init__.py  interfaces.py  requirements.txt
eval/evaluators/: __init__.py  base.py  classify.py  detect.py  segment.py
eval/metrics/: __init__.py  classification.py
eval/runtime/: __init__.py  bench_classify_onnx_npy.py  bench_classify_onnx_tch.py  bench_yolov5_onnx_npy.py  bench_yolov8_onnx_npy.py  bench_yolov8seg_onnx_npy.py
eval/tests/: __init__.py  test_eval.py  test_metrics.py
eval/triton/: README.md  __init__.py  bench_classify_triton_npy.py  bench_yolov5_triton_npy.py  bench_yolov8_triton_npy.py  bench_yolov8seg_triton_npy.py
eval/trt/: README.md  __init__.py  bench_classify_tensorrt_npy.py  bench_yolov5_tensorrt_npy.py  bench_yolov8_tensorrt_npy.py  (+1 more)
export/: README.md  __init__.py  _base.py  _utils.py  _validation.py  onnx2engine.py  onnx_to_engine.py  pth2onnx2trt_r18.py  pth2onnx2trt_r50.py  pth2onnx_classify.py  pytorch_to_onnx.py  requirements.txt  safe_int8_build_by_pycuda.py  safe_int8_build_by_torch.py  toy_net.py  ultarlytics_export.py  yolov8_export.py
export2/: README.md  onnx2trt_classify.py  pth2onnx_classify.py
llms/: __init__.py
modelflow/: README.md  __init__.py  config.py  interfaces.py  requirements.txt  types.py
py/: README.md  __init__.py  onnxruntime_demo.py  pytorch_to_onnx.py  requirements.txt  torchvision_vs_opencv.py
samples/: README.md  analyze_model.py  bench_model.py  eval_bench.py  eval_classify.py  eval_demo.py  eval_detect.py  eval_segment.py  infer.py  utils.py
specs/: SDD_AGENT.md  SDD_GUIDE.md  SDD_METHODOLOGY.md  SSD_AGENT.md  index.md
tests/: __init__.py  test_backends.py  test_cfgs.py  test_core.py  test_datasets.py  test_metrics.py  test_processors.py
utils/: __init__.py  helpers.py  logger.py  model_info.py  ops.py  profile.py
vlms/: README.md  __init__.py
(+354 files in other folders)
